tests/base/invalid/Assert_CompileFail_1.whiley


int f(int z):
    assert z
    return 0
